--- a/src/main/java/com/soarex/neural/ui/GUIRmt.form
+++ b/src/main/java/com/soarex/neural/ui/GUIRmt.form
@@ -133,21 +133,20 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="e7465" class="javax.swing.JButton" binding="buttonOK">
+              <component id="e7465" class="javax.swing.JButton" binding="buttonStart">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="OK"/>
+                  <text value="Start"/>
                 </properties>
               </component>
-              <component id="cff5e" class="javax.swing.JButton" binding="buttonLearningGraph">
+              <component id="e2d76" class="javax.swing.JButton" binding="buttonStop">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Learning"/>
-                  <toolTipText value="Shows a graph of the learning process"/>
+                  <text value="Stop"/>
                 </properties>
               </component>
             </children>
@@ -190,7 +189,7 @@
               <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <visible value="false"/>
+              <visible value="true"/>
             </properties>
             <border type="none"/>
             <children>
@@ -371,15 +370,6 @@
               <text value="More..."/>
             </properties>
           </component>
-          <component id="435d" class="javax.swing.JButton" binding="saveButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Save"/>
-              <toolTipText value="Save training graphs and approximation and the parameters of the neural network"/>
-            </properties>
-          </component>
           <component id="776f8" class="javax.swing.JButton" binding="buttonAbout">
             <constraints>
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -388,15 +378,49 @@
               <text value="About"/>
             </properties>
           </component>
-          <component id="e45bb" class="javax.swing.JButton" binding="loadButton" default-binding="true">
+          <component id="cff5e" class="javax.swing.JButton" binding="buttonLearningGraph">
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Load"/>
-              <toolTipText value="Load the configuration of the neural network from file"/>
+              <text value="Learning"/>
+              <toolTipText value="Shows a graph of the learning process"/>
             </properties>
           </component>
+          <grid id="6b682" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <inheritsPopupMenu value="true"/>
+              <opaque value="true"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="e45bb" class="javax.swing.JButton" binding="loadButton" default-binding="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <inheritsPopupMenu value="true"/>
+                  <margin top="2" left="4" bottom="2" right="4"/>
+                  <text value="Load"/>
+                  <toolTipText value="Load the configuration of the neural network from file"/>
+                </properties>
+              </component>
+              <component id="435d" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <margin top="2" left="4" bottom="2" right="4"/>
+                  <text value="Save"/>
+                  <toolTipText value="Save training graphs and approximation and the parameters of the neural network"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
       <vspacer id="5f5">
