--- a/src/main/java/com/soarex/neural/ui/GUIRmt.form
+++ b/src/main/java/com/soarex/neural/ui/GUIRmt.form
@@ -90,6 +90,7 @@
             </constraints>
             <properties>
               <text value=""/>
+              <visible value="true"/>
             </properties>
           </component>
           <component id="21ea8" class="javax.swing.JTextField" binding="fxMax">
@@ -138,6 +139,8 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <icon value="execute.png"/>
+                  <margin top="2" left="14" bottom="2" right="14"/>
                   <text value="Start"/>
                 </properties>
               </component>
@@ -146,6 +149,8 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <icon value="cancel.png"/>
+                  <margin top="2" left="14" bottom="2" right="14"/>
                   <text value="Stop"/>
                 </properties>
               </component>
@@ -189,7 +194,7 @@
               <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <visible value="true"/>
+              <visible value="false"/>
             </properties>
             <border type="none"/>
             <children>
@@ -352,6 +357,7 @@
                 </constraints>
                 <properties>
                   <enabled value="false"/>
+                  <text value="0"/>
                   <toolTipText value="Random number generator seed, need for reproducibility"/>
                 </properties>
               </component>
@@ -403,6 +409,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <icon value="open.png"/>
                   <inheritsPopupMenu value="true"/>
                   <margin top="2" left="4" bottom="2" right="4"/>
                   <text value="Load"/>
@@ -414,6 +421,7 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <icon value="save.png"/>
                   <margin top="2" left="4" bottom="2" right="4"/>
                   <text value="Save"/>
                   <toolTipText value="Save training graphs and approximation and the parameters of the neural network"/>
