--- a/src/main/java/com/soarex/neural/ui/GUIRmt.form
+++ b/src/main/java/com/soarex/neural/ui/GUIRmt.form
@@ -188,19 +188,19 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="18766" binding="optionsMore" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="18766" binding="optionsMore" layout-manager="GridLayoutManager" row-count="6" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="3" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <visible value="false"/>
+              <visible value="true"/>
             </properties>
             <border type="none"/>
             <children>
               <component id="cc563" class="javax.swing.JTextField" binding="layersCfg">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="50, 50, 50, 50, 50, 50, 50, 50"/>
@@ -218,7 +218,7 @@
               </component>
               <component id="8b2a9" class="javax.swing.JTextField" binding="learningRateValue">
                 <constraints>
-                  <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="0.01"/>
@@ -235,7 +235,7 @@
               </component>
               <component id="f89d7" class="javax.swing.JTextField" binding="numOutFunc">
                 <constraints>
-                  <grid row="2" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="4"/>
@@ -253,7 +253,7 @@
               </component>
               <component id="56073" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Seed"/>
@@ -261,7 +261,7 @@
               </component>
               <component id="32676" class="javax.swing.JCheckBox" binding="randomSeedCheckBox" default-binding="true">
                 <constraints>
-                  <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <hideActionText value="false"/>
@@ -279,7 +279,7 @@
               </component>
               <component id="d9c10" class="javax.swing.JTextField" binding="batchSizeValue">
                 <constraints>
-                  <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="100"/>
@@ -312,7 +312,7 @@
               </component>
               <component id="b906" class="javax.swing.JComboBox" binding="optimisationAlgo" custom-create="true">
                 <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <toolTipText value="Optimization algorithm to use"/>
@@ -328,7 +328,7 @@
               </component>
               <component id="7d48f" class="javax.swing.JComboBox" binding="lossFunc" custom-create="true">
                 <constraints>
-                  <grid row="5" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <toolTipText value="&lt;html&gt;&lt;b&gt;Loss function representing the price paid for inaccuracy of predictions&lt;/b&gt;&lt;br&gt; &lt;b&gt;MSE:&lt;/b&gt; Mean Squared Error: Linear Regression&lt;br&gt; &lt;b&gt;EXPLL:&lt;/b&gt; Exponential log likelihood: Poisson Regression&lt;br&gt; &lt;b&gt;XENT:&lt;/b&gt; Cross Entropy: Binary Classification&lt;br&gt; &lt;b&gt;MCXENT:&lt;/b&gt; Multiclass Cross Entropy&lt;br&gt; &lt;b&gt;RMSE_XENT:&lt;/b&gt; RMSE Cross Entropy&lt;br&gt; &lt;b&gt;SQUARED_LOSS:&lt;/b&gt; Squared Loss&lt;br&gt; &lt;b&gt;NEGATIVELOGLIKELIHOOD:&lt;/b&gt; Negative Log Likelihood&lt;br&gt; &lt;/html&gt;"/>
@@ -336,7 +336,7 @@
               </component>
               <component id="7a216" class="javax.swing.JTextField" binding="seedValue">
                 <constraints>
-                  <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <enabled value="false"/>
@@ -346,7 +346,7 @@
               </component>
               <component id="9c21f" class="javax.swing.JTextField" binding="epochsValue">
                 <constraints>
-                  <grid row="1" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="6" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="2000"/>
@@ -355,11 +355,25 @@
               </component>
               <component id="17a2e" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Epochs"/>
                 </properties>
+              </component>
+              <component id="59d59" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="4" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Weight init"/>
+                </properties>
+              </component>
+              <component id="89706" class="javax.swing.JComboBox" binding="weightInit">
+                <constraints>
+                  <grid row="4" column="6" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
